# 2d-cpp-engine

./: .gitignore  AssetManager.h  CMakeLists.txt  Component.cpp  Constants.h  Entity.h  EntityManager.cpp  Game.cpp  Game.h  README.md  TextureManager.cpp  TextureManager.h  main.cpp
assets/scripts/: Level1.lua
components/: ColliderComponent.cpp  ColliderComponent.h  KeyboardComponent.cpp  KeyboardComponent.h  ProjectileEmitterComponent.cpp  ProjectileEmitterComponent.h  SpriteComponent.cpp  SpriteComponent.h  TextLabelComponent.cpp  TextLabelComponent.h  TileComponent.cpp  TileComponent.h  TransformComponent.cpp  TransformComponent.h
src/: Animation.cpp  Animation.h  AssetManager.cpp  AssetManager.h  Collision.cpp  Collision.h  Component.h  Constants.h  Entity.cpp  Entity.h  EntityManager.cpp  EntityManager.h  FontManager.cpp  FontManager.h  Game.cpp  Game.h  Map.cpp  Map.h  TextureManager.cpp
